# daqiri

./: .clang-format  .dockerignore  .gitignore  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  README.md  SPARK_SOCKET_WIRE_README.md  index.html  mkdocs.yml  sitemap.xml
.claude/rules/: docs-sync.md
.cursor/: generic.mdc
.github/ISSUE_TEMPLATE/: bug_report.md  documentation-request.md  feature_request.md  missing_function_request.md  submit-question.md
.github/workflows/: docker-base.yml  docs.yml
.greptile/: config.json  files.json  rules.md
_stashed_tutorials/: getting_started.md  index.md  system_optimization.md  system_requirements.md
api-guide/: index.html
api-reference/: index.html
api-reference/configuration/: index.html
api-reference/cpp/: index.html
api-reference/python/: index.html
applications/: CMakeLists.txt
applications/resnet50_inference/: CMakeLists.txt  README.md  app_config.cpp  app_config.h  feature_sink.cpp  feature_sink.h  inference_pipeline.cu  inference_pipeline.h  main.cpp  pcap_replayer.cpp  pcap_replayer.h  trt_runner.cu  trt_runner.hpp
applications/resnet50_inference/configs/: resnet50_bench_spark.yaml  resnet50_wire_loopback.yaml
applications/resnet50_inference/tools/: export_resnet_onnx.py  prepare_cifar10_pcap.py  run_resnet_bench.sh
benchmarks/: index.html
benchmarks/benchmarks/: index.html
benchmarks/performance-dgx-spark/: index.html
benchmarks/raw_benchmarking/: index.html
benchmarks/socket_benchmarking/: index.html
cmake/: daqiri.pc.in  daqiriConfig.cmake.in  daqiriConfigVersion.cmake  daqiri_version.h.in
concepts/: index.html
configuration/: index.html
docs/: api-guide.md  concepts.md  configuration.md  daqiri-api.html  getting-started.md  index.html  index.md  performance-dgx-spark.md
docs/api-reference/: configuration.md  cpp.md  index.md  python.md
docs/benchmarks/: benchmarks.md  index.md  pcie_benchmarking.md  performance-dgx-spark.md  performance-igx-orin.md  raw_benchmarking.md  socket_benchmarking.md
docs/javascripts/: image-overlay.js  landing.js  platform-tab-toc.js  tab-dropdowns.js
docs/landing/: cta.html  examples.html  features.html  (+6 more)
dpdk_patches/: dmabuf.patch  mlx5_tx_done_cleanup.patch
examples/: CMakeLists.txt  README.md  bench_capture_environment.sh  bench_pipeline.cu  bench_pipeline.h  bench_platform.sh  bench_platform_igx.env  bench_platform_spark.env  bench_workload.cu  bench_workload.h  daqiri_bench_default_rx_multi_q.yaml  daqiri_bench_default_rx_multi_q_doca_eth.yaml  daqiri_bench_default_rx_reorder_seq_batch.yaml  daqiri_bench_default_rx_reorder_seq_ppb.yaml  daqiri_bench_default_sw_loopback.yaml  daqiri_bench_default_sw_loopback_doca_eth.yaml  daqiri_bench_default_sw_loopback_reorder_seq_1024.yaml  daqiri_bench_default_tx_rx.yaml  daqiri_bench_default_tx_rx_doca_eth.yaml  daqiri_bench_default_tx_rx_doca_eth_run.yaml  daqiri_bench_default_tx_rx_doca_eth_run_small.yaml  daqiri_bench_default_tx_rx_dpdk_gpu_direct.yaml  daqiri_bench_default_tx_rx_hds.yaml  daqiri_bench_default_tx_rx_hds_doca_eth.yaml  daqiri_bench_default_tx_rx_reorder_seq_1024.yaml  daqiri_bench_default_tx_rx_reorder_seq_1024_cpu.yaml  daqiri_bench_efa_tx_rx.yaml  daqiri_bench_pcie_sw_loopback.yaml  daqiri_bench_raw_rx_ibverbs.yaml  daqiri_bench_raw_rx_ibverbs_rtx_pro_6000.yaml  daqiri_bench_raw_rx_multi_q.yaml  daqiri_bench_raw_rx_reorder_seq_batch.yaml  daqiri_bench_raw_rx_reorder_seq_ppb.yaml  daqiri_bench_raw_rx_spark_xhost.yaml  daqiri_bench_raw_sw_loopback.yaml  daqiri_bench_raw_sw_loopback_reorder_seq_1024.yaml  daqiri_bench_raw_sw_loopback_rtx_pro_6000.yaml  daqiri_bench_raw_tx_only_rtx_pro_6000_nic.yaml  daqiri_bench_raw_tx_rx.py  daqiri_bench_raw_tx_rx.yaml  (+66 more)
examples/grafana/: README.md  compose.yaml  otel_prometheus.cpp  otel_prometheus.h  prometheus.yml  run-benchmark.sh
examples/grafana/grafana/dashboards/: daqiri-metrics.json
examples/grafana/grafana/provisioning/dashboards/: daqiri.yml
examples/grafana/grafana/provisioning/datasources/: prometheus.yml
getting-started/: index.html
hooks/: nav_dropdowns.py
overrides/: base.html  home.html  main.html
python/: CMakeLists.txt  daqiri_common_pybind.cpp  tune_system.py
python/pybind11/: __init__.py
scripts/: build-container.sh  check_doc_refs.py  check_html_links.py  cleanup.sh  discover_rtx_pro_topology.sh  gen_favicon_assets.py  gen_rtx_pro_mq_config.py  gen_spark_mq_config.py  gen_spark_netns_config.py  plot_mq_payload_sweep.py  plot_rtx_pro_bench.py  rtx_pro_discover.py  setup_spark_rdma_loopback.sh  setup_spark_wire_loopback_netns.sh  setup_spark_xhost_net.sh  spark_data_fill.sh  uninstall.sh
search/: search_index.json
src/: CMakeLists.txt  burst_validation.h  common.cpp  common.h  common_gds.cpp  common_s3.cpp  daqiri_pool.h  daqiri_ring.h  dpdk_log.cpp  dpdk_log.h  engine.cpp  engine.h  engine_dpdk.cpp  kernels.cu  kernels.h  logging.cpp  logging.hpp  manager.cpp  manager.h  metrics.cpp  metrics.h  rss.h  types.h
src/engines/dpdk/: CMakeLists.txt  daqiri_dpdk_engine.cpp  daqiri_dpdk_engine.h  daqiri_dpdk_stats.cpp
src/engines/efa/: CMakeLists.txt  daqiri_efa_engine.cpp  daqiri_efa_engine.h
src/engines/ibverbs/: CMakeLists.txt  daqiri_ibverbs_engine.cpp  daqiri_ibverbs_engine.h  mlx5_prm_min.h
src/engines/pcie/: CMakeLists.txt  daqiri_pcie_engine.cpp  daqiri_pcie_engine.h  pcie_provider.cpp  pcie_provider.h
src/engines/rdma/: CMakeLists.txt  daqiri_rdma_engine.cpp  daqiri_rdma_engine.h
src/engines/socket/: CMakeLists.txt  daqiri_socket_engine.cpp  daqiri_socket_engine.h
src/managers/doca_eth/: CMakeLists.txt  daqiri_doca_eth_mgr.cpp  daqiri_doca_eth_mgr.h
src/managers/dpdk/: CMakeLists.txt  daqiri_dpdk_mgr.cpp  daqiri_dpdk_mgr.h  daqiri_dpdk_stats.cpp  daqiri_dpdk_stats.h
src/managers/ibverbs/: CMakeLists.txt  daqiri_ibverbs_mgr.cpp  daqiri_ibverbs_mgr.h
src/managers/rdma/: CMakeLists.txt  daqiri_rdma_mgr.cpp  daqiri_rdma_mgr.h
src/managers/socket/: CMakeLists.txt  daqiri_socket_mgr.cpp  daqiri_socket_mgr.h
stylesheets/: extra.css  landing.css
(+40 files in other folders)
